--- a/challenges/web-frontend/caronsale/src/mixins.scss
+++ b/challenges/web-frontend/caronsale/src/mixins.scss
@@ -4,7 +4,7 @@
    -------------------------------------------------- */
 
 // min or max
-$media-direction:       min;  // min / max — default is min (mobile first)
+$media-direction:       max;  // min / max — default is min (mobile first)
 
 // Breakpoints
 // A Sass Map for all Breakpoints you need. But keep it simple! Just add Sizes that you need several times.
