--- a/challenges/web-frontend/caronsale/src/app/login/login.component.scss
+++ b/challenges/web-frontend/caronsale/src/app/login/login.component.scss
@@ -28,9 +28,13 @@
     -webkit-box-shadow: 0px 4px 30px 5px rgba(0,0,0,0.1);
     -moz-box-shadow: 0px 4px 30px 5px rgba(0,0,0,0.1);
     box-shadow: 0px 4px 30px 5px rgba(0,0,0,0.1);
-    padding: 32px 24px 32px 24px;
+    padding: 40px 24px 40px 24px;
     display: flex;
     flex-direction: column;
+
+    .form-field {
+      margin-bottom: 16px;
+    }
 
     input {
       width: 100%;
