if login goes wrong showing now error messages

--- a/challenges/web-frontend/caronsale/src/app/login/login.component.html
+++ b/challenges/web-frontend/caronsale/src/app/login/login.component.html
@@ -10,6 +10,9 @@
       <mat-error *ngIf="loginForm.controls.email.hasError('required')">
         Email is <strong>required</strong>
       </mat-error>
+      <mat-error *ngIf="hasLoginError">
+        User with the email address was not found
+      </mat-error>
     </mat-form-field>
     <mat-form-field class="form-field" appearance="fill">
       <mat-label>Password</mat-label>
@@ -17,6 +20,9 @@
       <mat-icon matSuffix>lock</mat-icon>
       <mat-error *ngIf="loginForm.controls.password.hasError('required')">
         Password is <strong>required</strong>
+      </mat-error>
+      <mat-error *ngIf="hasLoginError">
+        Given password might be wrong
       </mat-error>
     </mat-form-field>
     <button mat-flat-button color="primary" type="submit">Sign in</button>
