--- a/challenges/web-frontend/caronsale/src/app/main/main.component.html
+++ b/challenges/web-frontend/caronsale/src/app/main/main.component.html
@@ -1,1 +1,6 @@
-<h1>Welcome to caronsale</h1>
+<div *ngIf="authResult.privileges === '{PUBLIC_USER}~{SALESMAN_USER}'">
+  <app-salesman-overview></app-salesman-overview>
+</div>
+<div *ngIf="authResult.privileges === '{PUBLIC_USER}~{DEALERSHIP_USER}'">
+  <app-dealership-overview></app-dealership-overview>
+</div>
