--- a/challenges/web-frontend/caronsale/src/app/components/login/login.component.html
+++ b/challenges/web-frontend/caronsale/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="main-container">
   <form class="login-card" [formGroup]='loginForm' (ngSubmit)="onSubmit()">
     <mat-form-field class="form-field" appearance="fill">
