--- a/challenges/web-frontend/caronsale/src/app/components/login/login.component.scss
+++ b/challenges/web-frontend/caronsale/src/app/components/login/login.component.scss
@@ -1,4 +1,4 @@
-@import '../../mixins.scss';
+@import '../../../mixins.scss';
 
 .main-container {
   background-image: url('/assets/svgs/car-filler.svg');
@@ -43,10 +43,5 @@
     button {
       height: 48px;
     }
-  }
-
-  .bottom-error {
-    text-align: center;
-    margin-bottom: 16px;
   }
 }
