--- a/challenges/web-frontend/caronsale/src/app/common/nav-bar-salesman/nav-bar-salesman.component.html
+++ b/challenges/web-frontend/caronsale/src/app/common/nav-bar-salesman/nav-bar-salesman.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="toolbar-custom">
     <a class="logo" routerLink="/overview">caronsale</a>
     <span class="spacer"></span>
-    <a>Logout</a>
+    <a (click)="logout()" >Logout</a>
 </mat-toolbar>
