Implemented correct routing and users authentication

--- a/challenges/web-frontend/caronsale-coding-challenge/src/app/home-salesman/home-salesman.component.html
+++ b/challenges/web-frontend/caronsale-coding-challenge/src/app/home-salesman/home-salesman.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<h1>Welcome, {{currentUser.userId}}!</h1>
+<p>At this point this is an only-buyers portal, our sales portal coming soon!</p>
