--- a/challenges/web-frontend/caronsale/src/app/components/salesman-overview/salesman-overview.component.html
+++ b/challenges/web-frontend/caronsale/src/app/components/salesman-overview/salesman-overview.component.html
@@ -1,4 +1,8 @@
 <app-nav-bar-salesman></app-nav-bar-salesman>
-<p>
-  salesman-overview works!
-</p>
+<div class="container">
+  <div class="card-container">
+    <div *ngFor="let auction of auctions$ | async; trackBy: trackById;">
+      <app-card-auction [auction]="auction" ></app-card-auction>
+    </div>
+  </div>
+</div>
