--- a/challenges/web-frontend/caronsale/src/app/components/dealership-overview/dealership-overview.component.html
+++ b/challenges/web-frontend/caronsale/src/app/components/dealership-overview/dealership-overview.component.html
@@ -1,3 +1,8 @@
-<p>
-  dealership-overview works!
-</p>
+<app-nav-bar-dealership></app-nav-bar-dealership>
+<div class="container">
+  <div class="card-container">
+    <div *ngFor="let auction of auctions$ | async; trackBy: trackById;">
+      <app-card-auction [auction]="auction" ></app-card-auction>
+    </div>
+  </div>
+</div>
