--- a/challenges/web-frontend/caronsale/src/app/components/salesman-overview/salesman-overview.component.html
+++ b/challenges/web-frontend/caronsale/src/app/components/salesman-overview/salesman-overview.component.html
@@ -1,11 +1,13 @@
 <app-nav-bar-salesman></app-nav-bar-salesman>
 <div class="container">
-  <div class="card-container">
-    <div *ngFor="let key of  [1,2]">
-      <div *ngIf="!didLoadData">
+  <div *ngIf="!didLoadData">
+    <div class="card-container">
+      <div *ngFor="let key of  [1,2]">
         <app-card-auction-skeleton></app-card-auction-skeleton>
       </div>
     </div>
+  </div>
+  <div class="card-container">
     <div *ngFor="let auction of auctions$ | async; trackBy: trackById;">
       <app-card-auction [auction]="auction" ></app-card-auction>
     </div>
