--- a/challenges/web-frontend/caronsale-coding-challenge/src/app/app.component.html
+++ b/challenges/web-frontend/caronsale-coding-challenge/src/app/app.component.html
@@ -9,7 +9,7 @@
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 offset-sm-3">
+      <div class="col-12">
         <alert></alert>
         <router-outlet></router-outlet>
       </div>
